--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@formatjs/intl-relativetimeformat": "10.0.1",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.6",
+    "@vitejs/plugin-react": "^4.0.3",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
     "axios": "0.26.1",
@@ -39,6 +40,7 @@
     "reactstrap": "^9.2.0",
     "sass": "1.50.1",
     "socicon": "3.0.5",
+    "vite": "^4.4.3",
     "yup": "^1.0.0"
   },
   "devDependencies": {
