--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.5.0",
     "chart.js": "3.7.1",
     "clsx": "1.1.1",
+    "file-loader": "^6.2.0",
     "formik": "2.2.9",
     "line-awesome": "1.3.0",
     "nouislider": "15.5.1",
