--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@
 .env.test.local
 .env.production.local
 
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Editor directories and files
 .idea
 .vscode
