--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "demo7",
+  "name": "demo2",
   "version": "8.1.8",
   "private": true,
-  "homepage": "/metronic8/react/demo7",
+  "homepage": "/metronic8/react/demo2",
   "dependencies": {
     "@formatjs/intl-pluralrules": "4.3.3",
     "@formatjs/intl-relativetimeformat": "10.0.1",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.6",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
-    "axios": "0.26.1",
+    "axios": "^0.26.1",
     "bootstrap": "5.3.0-alpha1",
     "bootstrap-icons": "^1.5.0",
     "chart.js": "3.7.1",
     "clsx": "1.1.1",
-    "file-loader": "^6.2.0",
     "formik": "2.2.9",
     "line-awesome": "1.3.0",
     "nouislider": "15.5.1",
@@ -29,19 +28,19 @@
     "react-bootstrap": "2.5.0-beta.1",
     "react-copy-to-clipboard": "5.1.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-inlinesvg": "3.0.0",
     "react-intl": "5.25.0",
     "react-query": "3.38.0",
-    "react-router-dom": "6.3.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "react-toastify": "^9.1.3",
     "react-topbar-progress-indicator": "4.1.1",
     "reactstrap": "^9.2.0",
-    "sass": "1.50.1",
     "socicon": "3.0.5",
-    "vite": "^4.4.3",
     "yup": "^1.0.0"
   },
   "devDependencies": {
@@ -64,7 +63,8 @@
     "mini-css-extract-plugin": "2.6.1",
     "prettier": "2.6.2",
     "rtlcss-webpack-plugin": "4.0.7",
-    "sass-loader": "13.0.2",
+    "sass": "1.55.0",
+    "sass-loader": "13.2.0",
     "typescript": "4.6.3",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0"
