--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3011
 REACT_APP_BASE_LAYOUT_CONFIG_KEY='metronic-react-demo2-8120'
-REACT_APP_API_URL=https://preview.keenthemes.com/metronic8/laravel/api
+REACT_APP_API_URL=http://161.35.201.166
 REACT_APP_VERSION=v8.1.8
 REACT_APP_THEME_NAME=Metronic
 REACT_APP_THEME_DEMO=demo2
