--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^9.1.3",
     "react-topbar-progress-indicator": "4.1.1",
     "reactstrap": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "socicon": "3.0.5",
     "yup": "^1.0.0"
   },
@@ -54,6 +55,7 @@
     "@types/prismjs": "1.26.0",
     "@types/qs": "6.9.7",
     "@types/react": "18.0.6",
+    "@types/redux-persist": "^4.3.1",
     "@types/react-copy-to-clipboard": "5.0.2",
     "@types/react-dom": "18.0.2",
     "@types/react-table": "^7.7.9",
