--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-table": "^7.7.0",
     "react-toastify": "^9.1.3",
     "react-topbar-progress-indicator": "4.1.1",
@@ -55,10 +56,10 @@
     "@types/prismjs": "1.26.0",
     "@types/qs": "6.9.7",
     "@types/react": "18.0.6",
-    "@types/redux-persist": "^4.3.1",
     "@types/react-copy-to-clipboard": "5.0.2",
     "@types/react-dom": "18.0.2",
     "@types/react-table": "^7.7.9",
+    "@types/redux-persist": "^4.3.1",
     "@types/sass-loader": "8.0.3",
     "css-loader": "6.7.1",
     "del": "6.0.0",
